--- a/fe/src/index.css
+++ b/fe/src/index.css
@@ -52,3 +52,31 @@ table tbody tr td {
 #zmmtg-root {
   display: none;
 }
+
+fieldset {
+  display: block;
+  margin-inline-start: 2px;
+  margin-inline-end: 2px;
+  padding-block-start: 0.35em;
+  padding-inline-start: 0.75em;
+  padding-inline-end: 0.75em;
+  padding-block-end: 0.625em;
+  min-inline-size: min-content;
+  border-width: 2px;
+  border-style: groove;
+  border-color: rgb(192, 192, 192);
+  border-image: initial;
+}
+
+legend {
+  width: auto;
+  padding-inline-start: 2px;
+  padding-inline-end: 2px;
+  border: none;
+  font-size: 1em;
+}
+
+details {
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
